[tool.poetry]
name = "sspeedup"
version = "0.10.0"
description = "开发工具箱"
authors = ["yezi <yehaowei20060411@qq.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/FHU-yezi/sspeedup"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = { version = "^4.3.3", optional = true }
jieba = { version = "^0.42.1", optional = true }
qrcode = { version = "^7.4.2", optional = true }
pywebio = { version = "^1.8.1", optional = true }
sanic = { version = "^23.3.0", optional = true }
httpx = { version = "^0.24.0", optional = true }

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.262"
pyright = "^1.1.293"
black = "^23.1.0"

[tool.poetry.extras]
logging = ["pymongo"]
word-split-jieba = ["jieba"]
qrcode = ["qrcode"]
pywebio = ["pywebio"]
api-response-sanic = ["sanic"]
ability-word-split = ["httpx"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]

select = ["A", "ANN", "B", "C", "E", "F", "I", "N", "RET", "S", "SIM", "UP", "W"]

ignore = ["ANN101", "ANN102", "ANN401", "C901", "E501", "S101", "S104"]

target-version = "py38"

[tool.ruff.per-file-ignores]

"__init__.py" = ["F401"]